[package]
name = "order_fLow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = "0.0.5"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_yaml = "0.9.16"
toml = "0.5.10"

[[bin]]
name = "order_fLow"
path = "main.rs"
