[package]
name = "orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tungstenite = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3.1"
futures = "0.3.28"
futures-util = "0.3.28"
tokio-tungstenite = "*"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.8"

[[bin]]
name = "orders"
path = "main.rs"
