[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
serde = "1.0.152"
ws = "0.9.2"
message = { path = "../message"}
order = { path = "../order"}
signal = { path = "../signal"}
