[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.5.11"
exchanges = { path = "../exchanges"}
core = { path = "../core"}
router = { path = "../router"}
strategy = { path = "../strategy"}
